# MegaBouncer

./: .gitignore  .gitmodules  Cargo.toml  build.bat  check.bat  clean.bat  clippy.bat  out.json  out.txt  run.bat  run_recursive.bat
.github/workflows/: rust.yml
client/: Cargo.toml  main.js  webpack.config.js
client/app/pages/: Chat.tsx  Dashboard.tsx
client/src/: client.rs  main.rs  web_server.rs
client/ui/: Cargo.toml  index.html  package-lock.json  package.json
client/ui/src/: index.tsx  main.rs
client/ui/src/components/: Root.tsx
client/ui/src/handler/: base.ts  node.channel.registered.ts  node.disconnected.ts  node.identified.ts  node.listed.ts  ui.gotten.ts
client/ui_old/: index.html
client/ui_old/src/: index.tsx
client/ui_old/src/components/: Root.tsx
datastore/: Cargo.toml  config.toml.example
datastore/src/: main.rs
electron_client/: connector.js  index.html  main.js  package.json  setup_globals.bat  tsconfig.json  typings.json  webpack.config.js
electron_client/app/: index.tsx
electron_client/app/pages/: Chat.tsx  Container.tsx  ContainerComponent.tsx  (+2 more)
electron_client/host/: connector.tsx  main.tsx
irc_connector/: Cargo.toml
irc_connector/src/: channel.rs  connector.rs  main.rs  server.rs
irc_connector/ui/: Cargo.toml  package-lock.json
irc_connector/ui_old/: build.cmd  package-lock.json  package.json  setup.cmd
launcher/: Cargo.toml
launcher/src/: filewatcher.rs  main.rs  module.rs  server.rs  state.rs
launcher/src/backend/: backend_impl.rs  build.rs  mod.rs  running_build.rs
launcher/src/server/: mod.rs  routes.rs
launcher/src/server/websocket/: client.rs  messages.rs  mod.rs  server.rs
launcher/ui/: Cargo.toml  index.html  tsconfig.json
launcher/ui/src/: index.tsx  main.rs  polyfill.ts  server.ts
launcher/ui/src/components/: Root.tsx
libs/shared/: Cargo.toml
libs/sql/: Cargo.toml
libs/sql_derive/: Cargo.toml
server/: Cargo.toml
server/src/: client.rs  linereader.rs  main.rs  message.rs  server.rs  serverhandle.rs
shared/: Cargo.toml
shared/src/: client.rs  client_state.rs  lib.rs  linereader.rs  main.rs  reader.rs
tcp_connector/: Cargo.toml
tcp_connector/src/: client.rs  main.rs  tcp_listener.rs
test_client/: Cargo.toml
test_client/src/: main.rs
test_tool/: Cargo.toml
test_tool/src/: main.rs
(+20 files in other folders)
