[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
name = "launcher"
version = "0.1.0"
[dependencies]
actix = "*"
actix-web = "*"
clap = "*"
failure = "*"
lazy_static = "*"
mio = "*"
mio-extras = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sysinfo = "*"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.uuid]
features = ["serde"]
version = "*"

[dependencies.mio-child-process]
path = "../libs/mio-child-process"

[dependencies.shared]
path = "../shared"
